src/objects/Warehouse_Product__c.object
<CustomObject>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIH__c</fullName>
        <label>Quantity In Hand</label>
        <summaryFilterItems>
            <field>Item_Serial__c.Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Item_Serial__c.Usable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Item_Serial__c.Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Products Stored</relationshipLabel>
        <relationshipName>Products_Stored</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Warehouse Product</label>
    <nameField>
        <displayFormat>WP-{0000000}</displayFormat>
        <label>WP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>